不要なpタグと改行を消去しました。

--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-test1
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Web-</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="background">
+        <div class="header_box">
+          <div class="logo">
+            <img src="./images/logo.jpg" />
+          </div>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <span>
+                <a href="#">ABOUT</a>
+                <p class="menu_jp">企業情報</p>
+              </span>
+            </li>
+            <li class="nav-item">
+              <span>
+                <a href="#">NEWS</a>
+                <p class="menu_jp">ニュース</p>
+              </span>
+            </li>
+            <li class="nav-item">
+              <span>
+                <a href="#">SERVICE&PRODUCT</a>
+                <p class="menu_jp">サービス＆製品情報</p>
+              </span>
+            </li>
+            <li class="nav-item">
+              <span>
+                <a href="#">CONTACT</a>
+                <p class="menu_jp">お問い合わせ</p>
+              </span>
+            </li>
+          </ul>
+        </div>
+        <ul class="title">
+            <li class="title_big">Light Up</li>
+            <li class="title_big">Your</li>
+            <li class="title_big">Science</li>
+            <li class="title_small">- 科学を灯そう -</li>
+            <li class="title_small">イチヨンラボ</li>
+        </ul>
+        <div class="scroll">
+            <p>SCROLL</p>
+            <img src="./images/dot.png">
+        </div>
+      </div>
+    </header>
+  </body>
+</html>
