--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <li class="nav-item">
               <span>
                 <a href="#">ABOUT</a>
-                <p class="menu_jp">企業情報</p>
+                <div class="menu_jp">企業情報</div>
               </span>
             </li>
             <li class="nav-item">
               <span>
                 <a href="#">NEWS</a>
-                <p class="menu_jp">ニュース</p>
+                <div class="menu_jp">ニュース</div>
               </span>
             </li>
             <li class="nav-item">
               <span>
                 <a href="#">SERVICE&PRODUCT</a>
-                <p class="menu_jp">サービス＆製品情報</p>
+                <div class="menu_jp">サービス＆製品情報</div>
               </span>
             </li>
             <li class="nav-item">
               <span>
                 <a href="#">CONTACT</a>
-                <p class="menu_jp">お問い合わせ</p>
+                <div class="menu_jp">お問い合わせ</div>
               </span>
             </li>
           </ul>
@@ -50,10 +50,140 @@
             <li class="title_small">イチヨンラボ</li>
         </ul>
         <div class="scroll">
-            <p>SCROLL</p>
+            <div>SCROLL</div>
             <img src="./images/dot.png">
         </div>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="gray"></div>
+        <h2>ABOUT</h2>
+          <img src="./images/!1.png" alt=" " class="mark" />
+          <img src="./images/!2.png" alt=" " class="mark" />
+            <p>
+              私たちの社会は、10年前、100年前、あるいは1000年前よりも確実に進化しています。科学こそが社会を進<br>
+              化させ、幸せをつくり出したのだと信じています。科学は与えられるものではなく、私たち自身が開拓し、<br>
+              進化させていくものです。144Labは、科学に触れ、さらなる開拓と進化に参加する人々を、ちょっとだけお<br>
+              手伝いします。
+            </p>
+            <a href="#" class="btn_info">企業情報 ></a>
+      </section>
+      <section>
+        <h2 class="service">SERVICE&PRODUCT</h2>
+          <img src="./images/!1.png" alt=" " class="mark2" />
+          <img src="./images/!2.png" alt=" " class="mark2"  />
+            <div class="info_left">
+              <img src="./images/science.png" />
+                <div class="info_left_text">株式会社スイッチサイエンス
+                  <p class="p_info">
+                  最先端のテクノロジーをより多くの人々が道具として当たり前に<br>
+                  使える世界を目指して活動しています…
+                  </p>
+                  <a href="#" class="btn_info_2">詳しくはこちらへ ></a>
+                </div>
+            </div>
+            <div class="info_right">
+              <div class="info_right_text">株式会社スイッチエデュケーション
+                <p class="p_info">
+                  全ての子供にSTEM教育を実践することを目的に活動していま<br>
+                  す。考える、作る、発表するプロセスを…
+                </p>
+                <a href="#" class="btn_info_2">詳しくはこちらへ ></a>
+              </div>
+              <img src="./images/education.png" alt=" " class="img_right" />
+            </div>
+          <div class="info_under">
+            <div class="info_left">
+              <img src="./images/unko.png" />
+                <div class="info_left_text">うんこボタン
+                  <p class="p_info">
+                    赤ちゃんのうんちとおしっこの記録ができるボタンです。子育て世<br>
+                    代をちょっとした工夫でお手伝いする…
+                  </p>
+                  <a href="#" class="btn_info_2">詳しくはこちらへ ></a>
+                </div>
+            </div>
+            <div class="info_right">
+              <div class="info_right_text">IoT受託開発
+                <p class="p_info">
+                  IoTの開発には、ソフトウェアからハードウェアまで様々な技術<br>
+                  要素に関するノウハウが必要です…
+                </p>
+                <a href="#" class="btn_info_2">詳しくはこちらへ ></a>
+              </div>
+              <img src="./images/IoT.png" alt=" " class="img_right" />
+            </div>
+          </div>
+      </section>
+      <section>
+        <h2 class="news">NEWS</h2>
+          <img src="./images/!1.png" alt=" " class="mark3" />
+          <img src="./images/!2.png" alt=" " class="mark3" />
+          <div class="gray_box">
+            <div class="color_box">スイッチエデュケーション</div>
+            <div class="p_news">
+              <div>2019.04.24</div>
+              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+            </div>
+          </div>
+          <div class="gray_box">
+            <div class="color_box_144">144lob</div>
+            <div class="p_news">
+              <div>2019.04.24</div>
+              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+            </div>
+          </div>
+          <div class="gray_box">
+            <div class="color_box_science">スイッチサイエンス</div>
+            <div class="p_news">
+              <div>2019.04.24</div>
+              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+            </div>
+          </div>
+          <div class="gray_box">
+            <div class="color_box_unko">うんこボタン</div>
+            <div class="p_news">
+              <div>2019.04.24</div>
+              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+            </div>
+          </div>
+          <a href="#" class="btn_info_3">一覧 ></a>
+      </section>
+    </main>
+    <footer>
+      <ul class="nav-list_footer">
+        <li class="nav-item_footer">
+          <span>
+            <a href="#">
+              <div class="footer_menu">ABOUT</div>
+            </a>
+          </span>
+        </li>
+        <li class="nav-item_footer">
+          <span>
+            <a href="#">
+              <div class="footer_menu">NEWS</div>
+            </a>
+          </span>
+        </li>
+        <li class="nav-item_footer">
+          <span>
+            <a href="#">
+              <div class="footer_menu">SERVICE&PRODUCT</div>
+            </a>
+          </span>
+        </li>
+        <li class="nav-item_footer">
+          <span>
+            <a href="#">
+              <div class="footer_menu">CONTACT</div>
+            </a>
+          </span>
+        </li>
+      </ul>
+      <a href="#" class="btn_info_4">facebookページへ ></a>
+      <small>©︎Copyright144lab,inc,All Right Reserved</small>
+    </footer>  
   </body>
 </html>
