課題①-3　二回目の提出

--- a/index.html
+++ b/index.html
@@ -57,22 +57,19 @@
     </header>
     <main>
       <section>
-        <div class="gray"></div>
         <h2>ABOUT</h2>
-          <img src="./images/!1.png" alt=" " class="mark" />
-          <img src="./images/!2.png" alt=" " class="mark" />
-            <p>
+          <div class="gray">
+            <p class="p_gray">
               私たちの社会は、10年前、100年前、あるいは1000年前よりも確実に進化しています。科学こそが社会を進<br>
               化させ、幸せをつくり出したのだと信じています。科学は与えられるものではなく、私たち自身が開拓し、<br>
               進化させていくものです。144Labは、科学に触れ、さらなる開拓と進化に参加する人々を、ちょっとだけお<br>
               手伝いします。
             </p>
             <a href="#" class="btn_info">企業情報 ></a>
+          </div>
       </section>
       <section>
-        <h2 class="service">SERVICE&PRODUCT</h2>
-          <img src="./images/!1.png" alt=" " class="mark2" />
-          <img src="./images/!2.png" alt=" " class="mark2"  />
+        <h2>SERVICE&PRODUCT</h2>
             <div class="info_left">
               <img src="./images/science.png" />
                 <div class="info_left_text">株式会社スイッチサイエンス
@@ -93,7 +90,6 @@
               </div>
               <img src="./images/education.png" alt=" " class="img_right" />
             </div>
-          <div class="info_under">
             <div class="info_left">
               <img src="./images/unko.png" />
                 <div class="info_left_text">うんこボタン
@@ -114,41 +110,40 @@
               </div>
               <img src="./images/IoT.png" alt=" " class="img_right" />
             </div>
-          </div>
       </section>
       <section>
-        <h2 class="news">NEWS</h2>
-          <img src="./images/!1.png" alt=" " class="mark3" />
-          <img src="./images/!2.png" alt=" " class="mark3" />
-          <div class="gray_box">
-            <div class="color_box">スイッチエデュケーション</div>
-            <div class="p_news">
-              <div>2019.04.24</div>
-              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+        <h2>NEWS</h2>
+          <div class="news">
+            <div class="gray_box">
+              <div class="color_box">スイッチエデュケーション</div>
+              <div class="p_news">
+                <div>2019.04.24</div>
+                <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+              </div>
             </div>
-          </div>
-          <div class="gray_box">
-            <div class="color_box_144">144lob</div>
-            <div class="p_news">
-              <div>2019.04.24</div>
-              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+            <div class="gray_box">
+              <div class="color_box_144">144lob</div>
+              <div class="p_news">
+                <div>2019.04.24</div>
+                <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+              </div>
             </div>
-          </div>
-          <div class="gray_box">
-            <div class="color_box_science">スイッチサイエンス</div>
-            <div class="p_news">
-              <div>2019.04.24</div>
-              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+            <div class="gray_box">
+              <div class="color_box_science">スイッチサイエンス</div>
+              <div class="p_news">
+                <div>2019.04.24</div>
+                <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+              </div>
             </div>
-          </div>
-          <div class="gray_box">
-            <div class="color_box_unko">うんこボタン</div>
-            <div class="p_news">
-              <div>2019.04.24</div>
-              <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+            <div class="gray_box">
+              <div class="color_box_unko">うんこボタン</div>
+              <div class="p_news">
+                <div>2019.04.24</div>
+                <div class="p_news_right">株式会社144Lab（以下144Lab、本社：東京都新宿区）はInsightSiP SAS（以下InsightSiP...）　　　></div>
+              </div>
             </div>
-          </div>
-          <a href="#" class="btn_info_3">一覧 ></a>
+        </div>
+        <a href="#" class="btn_info_3">一覧 ></a>
       </section>
     </main>
     <footer>
